[project]
name = "cyano-pipeline"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "dagster>=1.12.6",
    "dagster-dlt>=0.28.6",
    "dagster-duckdb>=0.28.6",
    "dagster-polars>=0.27.8",
    "dlt[duckdb]>=1.17.0",
    "duckdb>=1.4.3",
    "psutil>=7.1.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "requests-ratelimiter>=0.7.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.36.1",
    "dagster-dg-cli>=1.12.6",
    "dagster-webserver>=1.12.6",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]

marimo = [
    "altair[all]>=6.0.0",
    "leafmap>=0.57.10",
    "marimo[sql]>=0.18.4",
    "pyzmq>=27.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cyano_pipeline"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "cyano_pipeline"

[tool.dg.cli.telemetry]
enabled = false

[tool.ruff.lint.per-file-ignores]
"src/notebooks/*.py" = ["F401", "E402", "F541"]

[tool.basedpyright]
typeCheckingMode = "recommended"
pythonVersion = "3.13"
exclude = ["src/notebooks"]
ignore = ["src/notebooks"]
useLibraryCodeForTypes = true

# Data Engineering Overrides: Suppress noise from dynamic/untyped libraries
reportAny = false
reportExplicitAny = false
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

# Runtime Safety: Catch potential logic bugs and NoneType errors
reportOptionalMemberAccess = "error"
reportOptionalSubscript = "error"
reportUnboundVariable = "error"
reportUndefinedVariable = "error"

# Code Hygiene
reportDuplicateImport = "warning"
reportImplicitStringConcatenation = "warning"
reportUnusedImport = "warning"

# Inference Logic
strictDictionaryInference = true
strictListInference = true
strictSetInference = true